--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <title>Restaurant Delivery - Accueil</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+  <h1>Bienvenue sur Restaurant Delivery</h1>
+  <p>Ce projet gère les livraisons via QR code et Firebase.</p>
+</body>
+</html>
 
